--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -13,4 +13,6 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1rem;
+    background-color: #ABB2B9;
+    min-height: 100vh;
 }
