--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -8,11 +8,12 @@
     --default-blue-color: #183153;
     --default-yellow-color: #FFF100;
     --darker-yellow-color: #c7bd00;
+    --site-background-color: #ABB2B9;
 }
 
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1rem;
-    background-color: #ABB2B9;
+    background-color: var(--site-background-color);
     min-height: 100vh;
 }
