Feita a parte de comunicação de um client ou mais

--- a/client/src/styles/Chat.css
+++ b/client/src/styles/Chat.css
@@ -11,6 +11,8 @@
 }
 
 .chat-container .chat-screen {
+    display: flex;
+    flex-direction: column;
     min-height: 60vh;
     max-height: 650px;
     background-color: #FFFFFF;
@@ -21,7 +23,7 @@
     overflow: auto;
 }
 
-.chat-container .chat-screen .message-block {
+.chat-container .chat-screen .message-content {
     display: flex;
     flex-direction: column;
     background-color: var(--default-blue-color);
@@ -30,20 +32,22 @@
     border-radius: 6px;
     color: #FFFFFF;
     max-width: 500px;
-    float: right;
+    min-width: 100px;
+    float: left;
     margin: 5px 0;
 }
 
-.chat-container .chat-screen .message-block .username {
+.chat-container .chat-screen .message-content .username-display {
     color: var(--default-yellow-color);
+    font-weight: bold;
     margin-bottom: 5px;
 }
 
-.chat-container .chat-screen .message-block .message {
+.chat-container .chat-screen .message-content .message-display {
     font-size: 0.9rem;
 }
 
-.chat-container .chat-screen .message-block .time {
+.chat-container .chat-screen .message-content .time-display {
     text-align: end;
     font-size: 0.8rem;
 }
@@ -91,6 +95,15 @@
     padding: 5px;
     border: none;
     outline: none;
+}
+
+.chat-container .chat-tools form .submit-field button {
+    border: none;
+    cursor: pointer;
+    background-color: var(--default-blue-color);
+    color: #FFFFFF;
+    padding: 5px 15px;
+    border-radius: 4px;
 }
 
 @media screen and (max-width: 968px) {
