--- a/client/src/styles/Chat.css
+++ b/client/src/styles/Chat.css
@@ -41,6 +41,7 @@
     max-width: 500px;
     float: left;
     margin: 5px 0;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
 }
 
 .chat-container .chat-screen .message-content .username-display {
